--- a/cv.tex
+++ b/cv.tex
@@ -158,7 +158,7 @@ ItalicFont = Fontin-Italic.otf
 
 % \vspace{-.1in}
 
-\renewcommand{\arraystretch}{0.6}% Tighter
+\renewcommand{\arraystretch}{0.7}% Tighter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education}
 \begin{tabular}{rp{13.6cm}}
@@ -169,7 +169,7 @@ ItalicFont = Fontin-Italic.otf
  & Specialized in Computer and Information Security | Current GPA: 4.0 \\ &\\
 %  & \emph{Currently researching on Kubernetes deployments} \\ &\\
 
- \textsc{Oct 2018 - Aug 2019}& \textbf{Master of Telecommunications Engineering}\\
+ \textsc{Oct 2017 - Aug 2019}& \textbf{Master of Telecommunications Engineering}\\
  & \footnotesize{University of the Basque Country | Bilbao (Spain)} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
  & Specialized in Telematics - Computer Science \\&\\
@@ -192,7 +192,7 @@ ItalicFont = Fontin-Italic.otf
 \begin{tabular}{rp{13.3cm}}
 
  \textsc{Feb 2017 - Dec 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize bilbaodynamics.com}\\
- & Volunteer - Engineer and Teacher \\ 
+ & Engineer and Teacher \\ 
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
  \vspace{-0.1in}
  \item Non-profit organization that teaches electronics, robotics, and programming
