final pre carrier fair

--- a/cv.tex
+++ b/cv.tex
@@ -43,7 +43,7 @@
   }%
 \fi
 
-\geometry{left=0.8in, right=0.8in, top=0.3in, bottom=0.3in}
+\geometry{left=0.8in, right=0.8in, top=0.4in, bottom=0.4in}
 
 %Setup hyperref package, and colours for links
 \usepackage{hyperref}
@@ -166,13 +166,14 @@ ItalicFont = Fontin-Italic.otf
  \textsc{Aug 2018 - Aug 2019}& \textbf{Master of Information Technology and Management}\\
  & \footnotesize{Illinois Institute of Technology | Chicago (USA)} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Specialized in Computer and Information Security | Current GPA: 4.0 \\ &\\
+ & Specialized in Computer and Information Security | Current GPA: 4.0 \\ 
+ & \footnotesize{Research Thesis on Kubernetes | Other courses: Cloud Computing (AWS) \& OS Virtualization} \\\vspace{-0.05in}&\\
 %  & \emph{Currently researching on Kubernetes deployments} \\ &\\
 
  \textsc{Oct 2017 - Aug 2019}& \textbf{Master of Telecommunications Engineering}\\
  & \footnotesize{University of the Basque Country | Bilbao (Spain)} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Specialized in Telematics - Computer Science \\&\\
+ & Specialized in Telematics - Computer Science \\\vspace{-0.05in}&\\
  
  \textsc{Sep 2013 - Jul 2017}& \textbf{Bachelor's Degree in Telecommunications Engineering}\\
  & \footnotesize{University of the Basque Country | Bilbao (Spain)} \\
@@ -199,7 +200,7 @@ ItalicFont = Fontin-Italic.otf
  \item Organized multiple courses and volunteered in teaching diverse knowledge areas
  \item Designed and developed software that helped the organization gain awareness and ease education
 
- \end{itemize}} \\
+ \end{itemize}} \vspace{-0.09in} \\ 
 
  \textsc{Jun 2016 - Sep 2017}& \textbf{Noisewatch Project Team} - Bilbao (Spain)\href{http://noise.watch}{\hfill | \footnotesize www.noise.watch}\\
  & Software Engineer \\
@@ -240,14 +241,14 @@ ItalicFont = Fontin-Italic.otf
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
 \textsc{Mar} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Achieving highest promotion score of 10/10 | Obtained special honors in 18 courses} \\&\\
+&\footnotesize{Achieving highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
 
 \textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
 & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
-& \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\&\\
+& \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
 
 \textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-& \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\&\\
+& \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
 % & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
 
 2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
@@ -265,14 +266,14 @@ ItalicFont = Fontin-Italic.otf
  \vspace{-0.1in}
  \item Developed free video and music downloader, player and converter
  \item Maintained backend online since 2015 with over 3000 users
- \end{itemize}} \\
+ \end{itemize}} \vspace{-0.1in} \\ 
 
  Oct 2015 & \textbf{YarHarPictor} | PIC16 ROM Flasher \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
  \vspace{-0.1in}
  \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
  \item Adopted by university microcontroller course to assist students implementing their programs
- \end{itemize}} \\
+ \end{itemize}} \vspace{-0.1in} \\ 
 
  May 2017 & \textbf{notMAIL} | Message and Notifications delivery protocol \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
@@ -281,7 +282,7 @@ ItalicFont = Fontin-Italic.otf
  \item Designed protocol specification and communications API
  \item Programmed multiple API libraries for different languages
  \item Implemented server node and two independent clients (webapp and Raspberry PI)
- \end{itemize}} \\
+ \end{itemize}} \vspace{-0.1in} \\ 
 
 %  \textbf{LeagueInfo}& Online game players tracker \\
 %  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
