--- a/cv.tex
+++ b/cv.tex
@@ -230,10 +230,10 @@ ItalicFont = Fontin-Italic.otf
  \section{Skills}
 \begin{tabular}{r|l}
 \textsc{Languages} & Spanish, English, Basque, French (Basic) \\
-\textsc{Programming} & C, Java, Nodejs, Bash, Python, Matlab, Web Stack \\
-\textsc{Technologies} & Networking, Linux, Cloud Computing, Kubernetes, Pentesting, Blockchain  \\
+\textsc{Programming} & C, Java, Javascript (NodeJS), Bash, Python, VHDL, Matlab, Web Stack \\
+\textsc{Technologies} & Kubernetes, Amazon AWS, Pentesting, Networking, Linux, Blockchain  \\
 \textsc{Other Knowledge} & Electronics, Signal Processing, Office \\
-\textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, Lan Parties
+% \textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, Lan Parties
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -241,11 +241,12 @@ ItalicFont = Fontin-Italic.otf
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
 \textsc{Mar} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Achieving highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
+&\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
 
 \textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-& \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
-& \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
+% & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
+% & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
+\vspace{-0.05in}&\\
 
 \textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
 & \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
@@ -258,8 +259,38 @@ ItalicFont = Fontin-Italic.otf
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Projects}
+\section{Personal Projects}
 \begin{tabular}{rp{14.85cm}}
+
+  Expected & \emph{``Study of on-premises Kubernetes deployment for university } \hfill \footnotesize{| Illinois Institute of Technology} \\
+  Jul 2019 & \hspace{0.1mm} \emph{cloud infrastructure``} \hfill \footnotesize{MSc. Final Thesis} \\
+  % & \footnotesize{University of the Basque Country} \\
+  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+  \vspace{-0.1in}
+  % \item Research Thesis at University of the Basque Country
+  % \item Implemented algorithm to early detect and adapt to concept drift
+  \item Study of viability and deployment of multi-node Kubernetes cluster on university's datacenter
+  \end{itemize}} \vspace{-0.1in} \\ 
+
+  % May 2015 & \textbf{MusicBOO} | Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
+  Jul 2017 & \emph{``Analysis and implementation of real-time machine learning } \hfill \footnotesize{| University of the Basque Country} \\
+  & \hspace{0.1mm} \emph{models in Big Data platforms and sensible to concept drift``} \hfill \footnotesize{BSc. Final Thesis} \\
+  % & \footnotesize{University of the Basque Country} \\
+  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+  \vspace{-0.1in}
+  % \item Research Thesis at University of the Basque Country
+  \item Implemented state-of-the-art algorithm to early detect and adapt to concept drift
+  \item Designed three-tier cluster infrastructure using Kafka, Spark \& Redis to preprocess before ML
+  \end{itemize}} \vspace{-0.1in} \\ 
+
+ May 2017 & \textbf{notMAIL} | Message and Notifications delivery protocol \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Invented email replacement focused on notifications managed by user controlled subscriptions
+ \item Designed protocol specification and communications API
+ \item Programmed multiple API libraries for different languages
+%  \item Implemented server node and two independent clients (webapp and Raspberry PI)
+ \end{itemize}} \vspace{-0.1in} \\ 
 
  May 2015 & \textbf{MusicBOO} | Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
@@ -275,14 +306,6 @@ ItalicFont = Fontin-Italic.otf
  \item Adopted by university microcontroller course to assist students implementing their programs
  \end{itemize}} \vspace{-0.1in} \\ 
 
- May 2017 & \textbf{notMAIL} | Message and Notifications delivery protocol \\
- & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
- \vspace{-0.1in}
- \item Invented email replacement focused on notifications managed by user controlled subscriptions
- \item Designed protocol specification and communications API
- \item Programmed multiple API libraries for different languages
- \item Implemented server node and two independent clients (webapp and Raspberry PI)
- \end{itemize}} \vspace{-0.1in} \\ 
 
 %  \textbf{LeagueInfo}& Online game players tracker \\
 %  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
@@ -291,12 +314,12 @@ ItalicFont = Fontin-Italic.otf
 %  \item Allowed to spectate games when that feature was not available in the official client
 %  \end{itemize}} \\
 
- Nov 2018 & \textbf{SSM} | Server management tool for sysadmins (university course project)\\
- & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
- \vspace{-0.1in}
- \item Facilitates reporting multiple servers or IOT devices' status from central platform 
- \item Allows to send batch commands and gather information from a list of servers
- \end{itemize}} \\
+%  Nov 2018 & \textbf{SSM} | Server management tool for sysadmins (university course project)\\
+%  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+%  \vspace{-0.1in}
+%  \item Facilitates reporting multiple servers or IOT devices' status from central platform 
+%  \item Allows to send batch commands and gather information from a list of servers
+%  \end{itemize}} \\
 
 %  \textbf{musicBOT}& Two wheel programmable robot\\
 %  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
