--- a/cv.tex
+++ b/cv.tex
@@ -161,19 +161,20 @@ ItalicFont = Fontin-Italic.otf
 \renewcommand{\arraystretch}{0.7}% Tighter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education}
-\begin{tabular}{rp{13.6cm}}
+% \begin{tabular}{rp{13.6cm}}
+\begin{tabular}{p{3.2cm}l}
 
  \textsc{Aug 2018 - Aug 2019}& \textbf{Master of Information Technology and Management}\\
  & \footnotesize{Illinois Institute of Technology | Chicago (USA)} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
  & Specialized in Computer and Information Security | Current GPA: 4.0 \\ 
- & \footnotesize{Research Thesis on Kubernetes | Other courses: Cloud Computing (AWS) \& OS Virtualization} \\\vspace{-0.05in}&\\
+ & \footnotesize{Research Thesis on Kubernetes | Other courses: Cloud Computing (AWS) \& OS Virtualization} \\ &\\[-0.05in]
 %  & \emph{Currently researching on Kubernetes deployments} \\ &\\
 
  \textsc{Oct 2017 - Aug 2019}& \textbf{Master of Telecommunications Engineering}\\
  & \footnotesize{University of the Basque Country | Bilbao (Spain)} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Specialized in Telematics - Computer Science \\\vspace{-0.05in}&\\
+ & Specialized in Telematics - Computer Science \\ &\\[-0.05in]
  
  \textsc{Sep 2013 - Jul 2017}& \textbf{Bachelor's Degree in Telecommunications Engineering}\\
  & \footnotesize{University of the Basque Country | Bilbao (Spain)} \\
@@ -186,11 +187,12 @@ ItalicFont = Fontin-Italic.otf
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{-.1in}
+% \vspace{-.1in}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Experience}
-\begin{tabular}{rp{13.3cm}}
+% \begin{tabular}{rp{13.3cm}}
+\begin{tabular}{p{3.2cm}p{13.1cm}}
 
  \textsc{Feb 2017 - Dec 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize bilbaodynamics.com}\\
  & Engineer and Teacher \\ 
@@ -224,7 +226,7 @@ ItalicFont = Fontin-Italic.otf
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%  \vspace{-.3in}
+ \vspace{-.3in}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \section{Skills}
@@ -240,6 +242,7 @@ ItalicFont = Fontin-Italic.otf
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
+% \begin{tabular}{p{3.2cm}p{13.1cm}}
 \textsc{Mar} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
 &\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
 
@@ -253,11 +256,11 @@ ItalicFont = Fontin-Italic.otf
 % & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
 
 2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
-&\footnotesize{ Four times awarded the special prize for achieving the highest grades} \\
+&\footnotesize{Four times awarded the special prize for achieving the highest grades} \\
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+ 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Personal Projects}
 \begin{tabular}{rp{14.85cm}}
