--- a/cv.tex
+++ b/cv.tex
@@ -263,10 +263,10 @@ ItalicFont = Fontin-Italic.otf
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Personal Projects}
-\begin{tabular}{rp{14.85cm}}
+\begin{tabular}{p{1.5cm}p{14.8cm}}
 
-  Expected & \emph{``Study of on-premises Kubernetes deployment for university } \hfill \footnotesize{| Illinois Institute of Technology} \\
-  Jul 2019 & \hspace{0.1mm} \emph{cloud infrastructure``} \hfill \footnotesize{MSc. Final Thesis} \\
+  Jul 2019 & \emph{``Study of on-premises Kubernetes deployment for university } \hfill \footnotesize{| Illinois Institute of Technology} \\
+  & \hspace{0.1mm} \emph{cloud infrastructure``} \hfill \footnotesize{MSc. Thesis} \\
   % & \footnotesize{University of the Basque Country} \\
   & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
   \vspace{-0.1in}
@@ -277,7 +277,7 @@ ItalicFont = Fontin-Italic.otf
 
   % May 2015 & \textbf{MusicBOO} | Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
   Jul 2017 & \emph{``Analysis and implementation of real-time machine learning } \hfill \footnotesize{| University of the Basque Country} \\
-  & \hspace{0.1mm} \emph{models in Big Data platforms and sensible to concept drift``} \hfill \footnotesize{BSc. Final Thesis} \\
+  & \hspace{0.1mm} \emph{models in Big Data platforms and sensible to concept drift``} \hfill \footnotesize{BSc. Thesis} \\
   % & \footnotesize{University of the Basque Country} \\
   & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
   \vspace{-0.1in}
