--- a/cv.tex
+++ b/cv.tex
@@ -150,8 +150,8 @@ ItalicFont = Fontin-Italic.otf
 \begin{center}
 \begin{tabular}{c}
   \hline \\[-0.8em]
-  Professional in DevOps, Cybersecurity and Networking
-  % Master of Telecommunications Engineering specialized in DevOps, cybersecurity and networking
+  % Professional in DevOps, Cybersecurity and Networking
+  Master of Telecommunications engineer specialized in DevOps, Cybersecurity and Networking
 \end{tabular}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -239,30 +239,10 @@ ItalicFont = Fontin-Italic.otf
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Achievements}
-\begin{tabular}{rp{13.6cm}}
-% \begin{tabular}{p{3.2cm}p{13.1cm}}
-\textsc{Mar} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
-
-\textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-% & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
-% & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
-\vspace{-0.05in}&\\
-
-\textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-& \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
-% & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
-
-2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Four times awarded the special prize for achieving the highest grades} \\
-\end{tabular}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Personal Projects}
+\section{Projects}
 \begin{tabular}{p{1.5cm}p{14.8cm}}
 
   Jul 2019 & \emph{``Study of on-premises Kubernetes deployment for university } \hfill \footnotesize{| Illinois Institute of Technology} \\
@@ -295,13 +275,6 @@ ItalicFont = Fontin-Italic.otf
 %  \item Implemented server node and two independent clients (webapp and Raspberry PI)
  \end{itemize}} \vspace{-0.1in} \\ 
 
- May 2015 & \textbf{MusicBOO} | Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
- & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
- \vspace{-0.1in}
- \item Developed free video and music downloader, player and converter
- \item Maintained backend online since 2015 with over 3000 users
- \end{itemize}} \vspace{-0.1in} \\ 
-
  Oct 2015 & \textbf{YarHarPictor} | PIC16 ROM Flasher \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
  \vspace{-0.1in}
@@ -309,6 +282,12 @@ ItalicFont = Fontin-Italic.otf
  \item Adopted by university microcontroller course to assist students implementing their programs
  \end{itemize}} \vspace{-0.1in} \\ 
 
+ May 2015 & \textbf{MusicBOO} | Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Developed free video and music downloader, player and converter
+ \item Maintained backend online since 2015 with over 3000 users
+ \end{itemize}} \vspace{-0.1in} \\ 
 
 %  \textbf{LeagueInfo}& Online game players tracker \\
 %  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
@@ -334,5 +313,25 @@ ItalicFont = Fontin-Italic.otf
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Achievements}
+\begin{tabular}{rp{13.6cm}}
+% \begin{tabular}{p{3.2cm}p{13.1cm}}
+\textsc{Mar} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
+&\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
+
+\textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+% & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
+% & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
+\vspace{-0.05in}&\\
+
+\textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+& \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
+% & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
+
+2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
+&\footnotesize{Four times awarded the special prize for achieving the highest grades} \\
+\end{tabular}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
